# Go2Robot

./: .gitignore  AGENTS.md  ARCHITECTURE.MD  BUILD.md  CLAUDE.md  D1_BRIDGE_SETUP.md  GO2_MVP_TECHNOLOGY_RU.md  GO2_QUICKSTART.md  README.md  pytest.ini  refactor_38.py  requirements.txt
.agents/skills/control-core/: SKILL.md
.agents/skills/mock-adapter/: SKILL.md
.agents/skills/route-schema/: SKILL.md
.claude/: settings.json
.claude/commands/: api-smoke.md  control-core.md  mock-adapter.md
.codex/: AGENTS.md  config.toml
config/: app_config.go2.enp0s20f0u1c2.yaml  app_config.yaml
config/routes/: demo_route.json  short_walk_20cm.json  waypoint_image_test.json
cpp/d1_bridge/: CMakeLists.txt
cpp/d1_bridge/include/: d1_bridge_server.hpp  d1_command_model.hpp  d1_command_serializer.hpp  d1_safety.hpp  d1_transport.hpp  d1_types.hpp
cpp/d1_bridge/src/: d1_bridge_server.cpp  d1_command_serializer.cpp  d1_safety.cpp  d1_transport.cpp  d1_transport_detail.hpp  main.cpp
cpp/d1_bridge/tests/: d1_transport_tests.cpp
install/: local_setup.sh  setup.sh
log/: latest_build
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/go2_bridge/lib/go2_bridge/: base_bridge  camera_bridge  (+1 more)
ros_ws/install/go2_nav_bringup/share/go2_nav_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/log/: latest_build
ros_ws/src/go2_bridge/: package.xml  setup.cfg  setup.py
ros_ws/src/go2_bridge/go2_bridge/: __init__.py  base_bridge.py  camera_bridge.py  lidar_bridge.py  pointcloud_utils.py  unitree_lidar.py
ros_ws/src/go2_bridge/resource/: go2_bridge
ros_ws/src/go2_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/go2_mission/: package.xml  setup.cfg  setup.py
ros_ws/src/go2_mission/go2_mission/: __init__.py  checkpoint_tasks.py  mission_api_node.py  mission_executor.py
ros_ws/src/go2_nav_bringup/: package.xml  setup.cfg  setup.py
ros_ws/src/go2_nav_bringup/launch/: mapping.launch.py  navigation.launch.py
ros_ws/src/go2_nav_bringup/maps/: .gitkeep
ros_ws/src/go2_nav_bringup/params/: nav2_params.yaml
ros_ws/src/go2_nav_bringup/resource/: go2_nav_bringup
ros_ws/src/go2_nav_bringup/rviz/: go2_nav.rviz
runs/: events.jsonl
runs/_test_artifacts/api_smoke_41769e446e954b0da6b5cf8e9f3fda7f/runs/: events.jsonl
runs/_test_artifacts/api_smoke_4f3687d6f5cb4cc3bc3fdc3a9107b9c0/runs/: events.jsonl
runs/_test_artifacts/api_smoke_97f30d9321e648a88c97376309da1e09/runs/: events.jsonl
runs/_test_artifacts/log_accepted_95a76a5bf8c74f34802516ff548f7622/: events.jsonl
runs/_test_artifacts/log_accepted_ac19acccbcaf450397d649b9c07c02a8/: events.jsonl
runs/_test_artifacts/log_accepted_f8dd5a1f4f87461bb691c91776a27edc/: events.jsonl
runs/_test_artifacts/log_chrono_5d93eeca964941e8b1c405be41b57149/: events.jsonl
runs/_test_artifacts/log_chrono_b78d91d729cc450fbf0b49843189a982/: events.jsonl
runs/_test_artifacts/log_chrono_c5d8708fccc54618adb96565501faeab/: events.jsonl
runs/_test_artifacts/log_filter_cat_af7a297fe54c4bb2b30e948c19687ec4/: events.jsonl
runs/_test_artifacts/log_filter_cat_b995555680644cf4b19c298edc0e0976/: events.jsonl
runs/_test_artifacts/log_filter_cat_f127586ee9004effa44bd0a0a79a061f/: events.jsonl
runs/_test_artifacts/log_filter_level_24b1bcfa9b0a47158b48047d489d6679/: events.jsonl
runs/_test_artifacts/log_filter_level_497094fb4dd94f589f46afffabaa4db9/: events.jsonl
runs/_test_artifacts/log_filter_level_85a48b4291a545b3b19416f1aeb3c7a9/: events.jsonl
runs/_test_artifacts/log_persist_1bc188611fd84b3d84d7b1114a1dd21c/: events.jsonl
runs/_test_artifacts/log_persist_301e30a7f6454a5fa21ae41ad89fa761/: events.jsonl
runs/_test_artifacts/log_persist_a307789d28da4fb790e601aca8fa4b4d/: events.jsonl
runs/_test_artifacts/log_rejected_06e683f4ef8848b99e5fd8628096a18e/: events.jsonl
runs/_test_artifacts/log_rejected_26a0cd1493504572a866313bc0d0d4f5/: events.jsonl
runs/_test_artifacts/log_rejected_8a0a9701a36e4e28a7dbed7cddbc619d/: events.jsonl
runs/_test_artifacts/route_loader_a48f180a5eba43abbefe3bfe64d3b243/: bad_route.json
runs/mission_20260417T060907068883Z/: event_log.jsonl  final_report.json  mission_meta.json  telemetry.jsonl
runs/mission_20260417T060907068883Z/analysis/: panel_A.json
runs/mission_20260417T061041757814Z/: event_log.jsonl  final_report.json  mission_meta.json  telemetry.jsonl
runs/mission_20260417T061041757814Z/analysis/: front_20cm.json  right_20cm.json
runs/mission_20260417T063127845551Z/: event_log.jsonl  final_report.json  mission_meta.json  telemetry.jsonl
runs/mission_20260417T063127845551Z/analysis/: panel_A.json
runs/mission_20260417T063202583053Z/: event_log.jsonl  final_report.json  mission_meta.json  telemetry.jsonl
runs/mission_20260417T063202583053Z/analysis/: front_20cm.json
runs/mission_20260417T064749833252Z/: event_log.jsonl  final_report.json  mission_meta.json  telemetry.jsonl
runs/mission_20260417T070616237960Z/: event_log.jsonl  final_report.json  mission_meta.json  telemetry.jsonl
runs/mission_20260417T070616237960Z/analysis/: front_20cm.json
shared_missions/maps/: .gitkeep
shared_missions/missions/: inspect_line_a.json
src/: __init__.py  analysis.py  api.py  api_d1.py  config.py  control.py  event_log.py  main.py  mission.py  models.py  operator_services.py  state_machine.py  storage.py  streaming.py  telemetry.py
src/integrations/: __init__.py  d1_client.py
src/robot/: __init__.py  go2_adapter.py  robot_adapter.py
src/sensors/: __init__.py  realsense_camera.py
src/services/: __init__.py  d1_service.py
src/web/: app.js  index.html  styles.css
systemd/: d1-bridge.service
tests/: __init__.py  test_api_smoke.py  test_control_priority.py  test_d1_api.py  test_d1_client.py  test_d1_service.py  test_go2_adapter.py  test_lifecycle.py  test_main_port_fallback.py  test_missions.py  test_operator_api.py  test_operator_overview.py  test_realsense_camera.py  test_report_builder.py  test_ros_process_service.py  test_ros_sensor_bridges.py  test_route_loader.py  test_sensor_status.py  test_state_machine.py  test_waypoints.py
(+129 files in other folders)
