<?xml version="1.0"?>
<package format="3">
  <name>go2_mission</name>
  <version>0.1.0</version>
  <description>ROS 2 mission execution and service bridge for coordinate waypoint missions.</description>
  <maintainer email="devnull@example.com">Go2 Robot</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>go2_interfaces</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
