<?xml version="1.0"?>
<package format="3">
  <name>go2_nav_bringup</name>
  <version>0.1.0</version>
  <description>Go2 navigation bringup assets.</description>

  <maintainer email="devnull@example.com">Go2 Robot</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
